--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <module>alibaba-seata-storage</module>
         <module>alibaba-seata-account</module>
         <module>alibaba-seata-business</module>
+        <module>cloud-event</module>
+        <module>boot-redisson</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -40,7 +42,7 @@
         <log4j.version>1.2.17</log4j.version>
         <mysql.version>5.1.47</mysql.version>
         <druid.version>1.1.16</druid.version>
-<!--        <druid.version>1.1.21</druid.version>-->
+        <fastjson.version>1.2.58</fastjson.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
 
         <hutool.version>5.2.3</hutool.version>
@@ -117,6 +119,13 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring.boot.version}</version>
+            </dependency>
+
+            <!-- fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
